<resources>
    <string name="app_name">Wanderlust</string>
    <!-- Buttons -->
    <string name="button_sign_in">Sign in with email</string>
    <string name="button_create_account">Create new account</string>
    <string name="button_sign_up">Sign up with email</string>
    <string name="button_continue">Continue</string>
    <!-- TextViews -->
    <string name="text_sign_in">Login to your account</string>
    <string name="text_sign_in2">Enter your email and password to sign in</string>
    <string name="text_sign_up">Create an account</string>
    <string name="text_sign_up2">Enter your email and password to sign up</string>
    <string name="or_create">――――――" "or continue with" "――――――</string>
    <string name="by_clicking">By clicking continue, you agree to our Terms of Service and Privacy Policy</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Hints -->
    <string name="email_example">email@domain.com</string>
    <string name="password_example">your password</string>
    <string name="username_example">your name</string>
    <!-- Fragments -->
    <string name="title_explore">Explore</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="text_one_explore_fragment">Discover a Different World</string>
    <string name="recommended">Recommended</string>
    <string name="view_all">View All</string>
    <string name="flight">Flight</string>
    <string name="hotels">Hotels</string>
    <string name="trips">Trips</string>
    <string name="foods">Foods</string>
    <string name="italy">Italy</string>
    <string name="amalfi">Amalfi</string>
    <string name="england">England</string>
    <string name="london">London</string>
    <string name="japan">Japan</string>
    <string name="tokyo">Tokyo</string>
    <string name="spain">Spain</string>
    <string name="barcelona">Barcelona</string>
    <string name="france">France</string>
    <string name="paris">Paris</string>
    <string name="united_arab_emirates">UAE</string>
    <string name="dubai">Dubai</string>


</resources>